@@ -1,3 +1,8 @@
+2010-03-08  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php:
+	- WP < 2.8 compatibility when calling wp_enqueue_script().
+
 2010-03-07  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php, scorerender-admin.php:
